﻿2007-02-20  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/log.cpp: Applied patch by trapdoor to fix the usage of a
	deprecated function on MacOS X 10.4 and later.

2007-02-17  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/help/header.txt, NEWS, README: Updated release date.
	* data/graphics/sprites/Makefile.am,
	data/graphics/sprites/CMakeLists.txt, data/graphics/CMakeLists.txt:
	Excluded sprites directory from installed files.

2007-02-16  Rogier Polak  <rogier.l.a.polak@gmail.com>

	* src/gui/updatewindow.cpp: Fixed the update bug (hopefully), by
	modifying the usage of the synchronisation between threads. Added a
	check for existence of the updated file.

2007-02-15  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/winver.h, README, configure.ac, data/help/header.txt, NEWS,
	CMakeLists.txt: Changed version to 0.0.22.2.

2007-02-13  Philipp Sehmisch  <tmw@crushnet.org>

	* src/gui/register.cpp, src/logindata.h, src/main.cpp: Fixed the _M/_F
	username bug.

2007-02-11  Philipp Sehmisch  <tmw@crushnet.org>

	* data/maps/new_1-9.tmx.gz, data/maps/new_1-14.tmx.gz,
	data/maps/new_1-16.tmx.gz: Restored the cloud shadow overlays in the
	woodland that got lost somehow during the halloween and christmas chaos.

2007-02-11  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/graphics/sprites/chest_cotton_female.png: Removed this strange
	duplicate.
	* data/graphics/sprites/Makefile.am,
	data/graphics/sprites/CMakeLists.txt: Some updates.

2007-02-10  Philipp Sehmisch  <tmw@crushnet.org>

	* src/gui/viewport.cpp: Fixed the bug in the scrolling limitation that made
	it possible to scroll outside of the map in the south and east.

2007-02-04  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/menuwindow.cpp: Fixed a small glitch when dragging the menu
	window.

2007-02-03  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/player-female-base.png: Made the standing and
	walking of the female characters more feminine.