@@ -187,35 +187,32 @@ void BeingHandler::handleMessage(MessageIn *msg)
             switch (type)
             {
                 case 0: // Damage
-                    if (dstBeing == NULL) break;
-
-                    dstBeing->setDamage(param1, SPEECH_TIME);
-
-                    if (srcBeing != NULL &&
-                            srcBeing != player_node)
-                    {
-                        srcBeing->setAction(Being::ATTACK);
-                        srcBeing->mFrame = 0;
-                        srcBeing->mWalkTime = tick_time;
+                    if (dstBeing) {
+                        dstBeing->takeDamage(param1);
+                    }
+                    if (srcBeing) {
+                        srcBeing->handleAttack(dstBeing, param1);
                     }
                     break;
 
                 case 2: // Sit
-                    if (srcBeing == NULL) break;
-                    srcBeing->mFrame = 0;
-                    srcBeing->setAction(Being::SIT);
+                    if (srcBeing) {
+                        srcBeing->mFrame = 0;
+                        srcBeing->setAction(Being::SIT);
+                    }
                     break;
 
                 case 3: // Stand up
-                    if (srcBeing == NULL) break;
-                    srcBeing->mFrame = 0;
-                    srcBeing->setAction(Being::STAND);
+                    if (srcBeing) {
+                        srcBeing->mFrame = 0;
+                        srcBeing->setAction(Being::STAND);
+                    }
                     break;
             }
             break;
 
         case SMSG_BEING_LEVELUP:
-            if ((Uint32)msg->readInt32() == player_node->getId()) {
+            if ((Uint32) msg->readInt32() == player_node->getId()) {
                 logger->log("Level up");
                 sound.playSfx("sfx/levelup.ogg");
             } else {
