@@ -2,6 +2,9 @@
 
 	* src/log.cpp: Applied patch by trapdoor to fix the usage of a
 	deprecated function on MacOS X 10.4 and later.
+	* src/being.cpp, src/monster.cpp, src/net/beinghandler.cpp,
+	src/localplayer.h, src/being.h, src/monster.h: Now different sounds
+	can play when a monster misses the player.
 
 2007-02-17  Bjørn Lindeijer  <bjorn@lindeijer.nl>
 
